// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TopTracks Component handles tracks without a 300px image gracefully 1`] = `
<div
  className="css-sak8bt"
>
  <div
    className="css-ccroti"
  >
    <h3
      className="css-9nh3l5"
    >
      Top Tracks
    </h3>
  </div>
  <p
    className="css-1qwovgy"
  >
    My 12 most-played tracks over the last 4 weeks.
  </p>
  <div
    className="media-item_grid null css-5stlgz"
  >
    <a
      className="media-item_media css-13fusor"
      href="http://spotify.com/track3"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      title="Song Three – Artist Four"
    >
      <div
        className="css-x4b07x"
      >
        <div
          className="media-item_caption css-e7oldi"
        >
          <span>
            Song Three
          </span>
        </div>
        <img
          alt="cover artwork"
          className="css-karewm"
          crossOrigin="anonymous"
          loading="lazy"
        />
      </div>
    </a>
  </div>
</div>
`;

exports[`TopTracks Component renders correctly when loading 1`] = `
<div
  className="css-sak8bt"
>
  <div
    className="css-ccroti"
  >
    <h3
      className="css-9nh3l5"
    >
      Top Tracks
    </h3>
  </div>
  <p
    className="css-1qwovgy"
  >
    My 12 most-played tracks over the last 4 weeks.
  </p>
  <div
    className="media-item_grid null css-5stlgz"
  >
    <div
      className="show-loading-animation"
    >
      <div
        className="rect-shape css-2us3i8"
        style={
          {
            "backgroundColor": "#efefef",
            "height": "100%",
            "marginRight": 10,
            "width": "100%",
          }
        }
      />
    </div>
    <div
      className="show-loading-animation"
    >
      <div
        className="rect-shape css-2us3i8"
        style={
          {
            "backgroundColor": "#efefef",
            "height": "100%",
            "marginRight": 10,
            "width": "100%",
          }
        }
      />
    </div>
    <div
      className="show-loading-animation"
    >
      <div
        className="rect-shape css-2us3i8"
        style={
          {
            "backgroundColor": "#efefef",
            "height": "100%",
            "marginRight": 10,
            "width": "100%",
          }
        }
      />
    </div>
    <div
      className="show-loading-animation"
    >
      <div
        className="rect-shape css-2us3i8"
        style={
          {
            "backgroundColor": "#efefef",
            "height": "100%",
            "marginRight": 10,
            "width": "100%",
          }
        }
      />
    </div>
    <div
      className="show-loading-animation"
    >
      <div
        className="rect-shape css-2us3i8"
        style={
          {
            "backgroundColor": "#efefef",
            "height": "100%",
            "marginRight": 10,
            "width": "100%",
          }
        }
      />
    </div>
    <div
      className="show-loading-animation"
    >
      <div
        className="rect-shape css-2us3i8"
        style={
          {
            "backgroundColor": "#efefef",
            "height": "100%",
            "marginRight": 10,
            "width": "100%",
          }
        }
      />
    </div>
    <div
      className="show-loading-animation"
    >
      <div
        className="rect-shape css-2us3i8"
        style={
          {
            "backgroundColor": "#efefef",
            "height": "100%",
            "marginRight": 10,
            "width": "100%",
          }
        }
      />
    </div>
    <div
      className="show-loading-animation"
    >
      <div
        className="rect-shape css-2us3i8"
        style={
          {
            "backgroundColor": "#efefef",
            "height": "100%",
            "marginRight": 10,
            "width": "100%",
          }
        }
      />
    </div>
    <div
      className="show-loading-animation"
    >
      <div
        className="rect-shape css-2us3i8"
        style={
          {
            "backgroundColor": "#efefef",
            "height": "100%",
            "marginRight": 10,
            "width": "100%",
          }
        }
      />
    </div>
    <div
      className="show-loading-animation"
    >
      <div
        className="rect-shape css-2us3i8"
        style={
          {
            "backgroundColor": "#efefef",
            "height": "100%",
            "marginRight": 10,
            "width": "100%",
          }
        }
      />
    </div>
    <div
      className="show-loading-animation"
    >
      <div
        className="rect-shape css-2us3i8"
        style={
          {
            "backgroundColor": "#efefef",
            "height": "100%",
            "marginRight": 10,
            "width": "100%",
          }
        }
      />
    </div>
    <div
      className="show-loading-animation"
    >
      <div
        className="rect-shape css-2us3i8"
        style={
          {
            "backgroundColor": "#efefef",
            "height": "100%",
            "marginRight": 10,
            "width": "100%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`TopTracks Component renders correctly with no tracks 1`] = `
<div
  className="css-sak8bt"
>
  <div
    className="css-ccroti"
  >
    <h3
      className="css-9nh3l5"
    >
      Top Tracks
    </h3>
  </div>
  <p
    className="css-1qwovgy"
  >
    My 12 most-played tracks over the last 4 weeks.
  </p>
  <div
    className="media-item_grid null css-5stlgz"
  />
</div>
`;

exports[`TopTracks Component renders correctly with tracks 1`] = `
<div
  className="css-sak8bt"
>
  <div
    className="css-ccroti"
  >
    <h3
      className="css-9nh3l5"
    >
      Top Tracks
    </h3>
  </div>
  <p
    className="css-1qwovgy"
  >
    My 12 most-played tracks over the last 4 weeks.
  </p>
  <div
    className="media-item_grid null css-5stlgz"
  >
    <a
      className="media-item_media css-13fusor"
      href="http://spotify.com/track1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      title="Song One – Artist One, Artist Two"
    >
      <div
        className="css-x4b07x"
      >
        <div
          className="media-item_caption css-e7oldi"
        >
          <span>
            Song One
          </span>
        </div>
        <img
          alt="cover artwork"
          className="css-karewm"
          crossOrigin="anonymous"
          loading="lazy"
          src="http://example.com/medium.jpg"
        />
      </div>
    </a>
    <a
      className="media-item_media css-13fusor"
      href="http://spotify.com/track2"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      title="Song Two – Artist Three"
    >
      <div
        className="css-x4b07x"
      >
        <div
          className="media-item_caption css-e7oldi"
        >
          <span>
            Song Two
          </span>
        </div>
        <img
          alt="cover artwork"
          className="css-karewm"
          crossOrigin="anonymous"
          loading="lazy"
          src="http://example.com/medium2.jpg"
        />
      </div>
    </a>
  </div>
</div>
`;
